[tool.poetry]
name = "mood-tracker"
version = "0.1.0"
description = "A personal mood tracker"
authors = ["Brendan Tobolaski <brendan@tobolaski.com>"]
readme = "README.md"
packages = [{include = "mood_tracker"}, {include = "tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
psycopg2 = "^2.9.5"
whitenoise = "^6.3.0"
waitress = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
